# cpp-qt-kf5-file-browser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
